# chatGPTnextweb

./: .env.template  package.json
app/: constant.ts  utils.ts
app/api/: auth.ts  openrouter.ts
app/api/[provider]/[...path]/: route.ts
app/client/: api.ts
app/components/: emoji.tsx  exporter.tsx  settings.tsx
app/config/: server.ts
app/locales/: cn.ts  en.ts
app/store/: access.ts  update.ts
app/styles/: globals.scss
app/utils/: stream.ts
src-tauri/: Cargo.toml
src-tauri/capabilities/: migrated.json
src-tauri/src/: main.rs  stream.rs
test/: stream-fetch.test.ts
